# PromoMind-public-backup-20260624

./: .gitignore  PromoMind_5_second_meeting_message.md  PromoMind_PM_team_execution_pack.md  PromoMind_RACI_matrix.csv  PromoMind_bilingual_proposal.docx  PromoMind_bilingual_proposal.md  PromoMind_four_person_work_split.md  PromoMind_task_board.csv  README.md  build_promomind_docs.py  index.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
app/: streamlit_app.py
data/: README.md
docs/: coupon_response_improvement.md  coupon_timing_demo.md  data_dictionary.md  demo_spec.md  experiment_protocol.md  final_delivery_audit.md  final_guideline_compliance.md  member_b_modeling.md  member_b_slide_content.md  member_b_sota_positioning.md  next_flow_handoff.md  project_plan.md  reranking_owner_c.md  zixun_cleaning_pipeline.md
notebooks/: 01_business_utility_evaluation.ipynb  01_discount_penalty_ablation.ipynb  02_diversity_coverage_novelty.ipynb  03_business_utility_evaluation.ipynb  03_discount_penalty_ablation.ipynb  Part C.ipynb  README.md  Untitled.ipynb
scripts/: analyze_coupon_response_drift.py  build_coupon_timing_demo.py  build_web_demo_artifacts.py  clean_completejourney.py  download_completejourney.R  make_sample_data.py  prepare_dataset.py  restore_local_artifacts.py  run_candidate_models.py  run_cornac_nbr_models.py  run_coupon_response_neural_ranker.py  run_coupon_response_ranker.py  run_coupon_response_reranking.py  run_coupon_response_tail_fusion.py  run_coupon_response_xgboost_ranker.py  run_sota_ensemble.py
tests/: conftest.py  (+4 more)
(+57 files in other folders)
