[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promomind"
version = "0.1.0"
description = "Promotion-aware grocery basket and coupon recommender project skeleton."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "streamlit>=1.32",
]

[project.optional-dependencies]
recommenders = [
  "implicit>=0.7",
  "cornac==2.2.2",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
